--- a/Exercises7.9.-7.21.(extending the bloglist)/src/index.css
+++ b/Exercises7.9.-7.21.(extending the bloglist)/src/index.css
@@ -20,6 +20,10 @@
 
 .blog {
   border: 1px solid black;
-  padding: 0 10px;
+  padding: 10px;
   margin: 10px 0;
+}
+
+.app_body {
+  margin: 0 10px;
 }
